Added div row in about-us template

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -39,32 +39,34 @@
     <section class="my-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 col-12 my-auto">
-            <h3>About us</h3>
-            <p class="pe-md-5 mb-4">
-              The Sequencing and Bioinformatics Metadata project is funded through the Maine-eDNA RII Track-1 EPSCoR
-              grant supported by the National Science Foundation award #OIA-1849227. Maine-eDNA is a Maine coast-wide
-              research effort to determine the efficacy of ecosystem monitoring through environmental DNA (eDNA).
-              The metadata project is directly related to the goals of Theme 3: Macrosystem eDNA Integration, but also
-              involved in Theme 1: Sustainable Fisheries and Theme 2: Harmful and Shifting Species. Our efforts
-              contribute to the Data Management and Data Analysis Pipeline work groups. <br> <br>
-              The Sequencing and Bioinformatics Metadata project is a collaboration between the Coordinated Operating
-              Research Entities (CORE) environmental DNA (eDNA) Laboratory and the Data Management Team to facilitate
-              the development of a web application for the management and tracking of eDNA samples.  <br>
-              <a href="https://umaine.edu/edna/" class="text-info icon-move-right">More about Maine-eDNA
-                <i class="fas fa-arrow-right text-sm ms-1"></i>
+          <div class="row">
+            <div class="col-md-8 col-12 my-auto">
+              <h3>About us</h3>
+              <p class="pe-md-5 mb-4">
+                The Sequencing and Bioinformatics Metadata project is funded through the Maine-eDNA RII Track-1 EPSCoR
+                grant supported by the National Science Foundation award #OIA-1849227. Maine-eDNA is a Maine coast-wide
+                research effort to determine the efficacy of ecosystem monitoring through environmental DNA (eDNA).
+                The metadata project is directly related to the goals of Theme 3: Macrosystem eDNA Integration, but also
+                involved in Theme 1: Sustainable Fisheries and Theme 2: Harmful and Shifting Species. Our efforts
+                contribute to the Data Management and Data Analysis Pipeline work groups. <br> <br>
+                The Sequencing and Bioinformatics Metadata project is a collaboration between the Coordinated Operating
+                Research Entities (CORE) environmental DNA (eDNA) Laboratory and the Data Management Team to facilitate
+                the development of a web application for the management and tracking of eDNA samples.  <br>
+                <a href="https://umaine.edu/edna/" class="text-info icon-move-right">More about Maine-eDNA
+                  <i class="fas fa-arrow-right text-sm ms-1"></i>
+                </a>
+              </p>
+            </div>
+            <div class="col-md-4 col-12 my-auto">
+              <a target="_blank" href="https://github.com/Maine-eDNA/medna-metadata">
+                <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/logo-medna-metadata.png' %}" alt="medna-metadata logo">
               </a>
-            </p>
-          </div>
-          <div class="col-md-4 col-12 my-auto">
-            <a target="_blank" href="https://github.com/Maine-eDNA/medna-metadata">
-              <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/logo-medna-metadata.png' %}" alt="medna-metadata logo">
-            </a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-12 col-12 my-auto">
-        <div class="w-100 border-radius-lg shadow-lg" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
+        <div class="col-md-12 col-12 my-auto">
+          <div class="w-100 border-radius-lg shadow-lg" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
+          </div>
         </div>
       </div>
     </section>
