--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -65,8 +65,8 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-md-8 text-start mb-5 mt-5">
-            <div class="w-100 border-radius-md shadow-lg" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
+          <div class="col-md-12 col-12 my-auto">
+            <div class="w-100 border-radius-lg shadow-lg" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
             </div>
           </div>
         </div>
