updated css in about-us template

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -63,9 +63,9 @@
           </div>
           </div>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-12 my-auto">
+      <div class="col-lg-4 ms-auto mt-lg-0 mt-4">
+        <div class="card">
+          <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
             <div class="w-100 border-radius-lg shadow-lg" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
             </div>
           </div>
