updated about-us template css

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -63,16 +63,12 @@
           </div>
           </div>
       </div>
-      <div class="col-lg-4 ms-auto mt-lg-0 mt-4">
-        <div class="card">
-          <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-            <div class="w-100 border-radius-lg shadow-lg" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
     <!-- END about-us image & text & info -->
+    <div class="container mt-sm-5">
+      <div class="page-header py-6 py-md-5 my-sm-3 mb-3 border-radius-xl" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
+      </div>
+    </div>
     <!-- -------- START Features w/ pattern background & stats & rocket -------- -->
     <section class="pb-5 position-relative bg-gradient-dark mx-n3">
       <div class="container">
