updated about-us template css

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -65,7 +65,7 @@
       </div>
     </section>
     <!-- END about-us image & text & info -->
-    <div class="container mt-sm-5">
+    <div class="container mt-sm-auto">
       <div class="page-header py-6 py-md-5 my-sm-3 mb-3 border-radius-xl" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
       </div>
     </div>
