updated about-me template css

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -65,9 +65,8 @@
       </div>
     </section>
     <!-- END about-us image & text & info -->
-    <div class="container mt-sm-auto">
-      <div class="page-header py-6 py-md-5 my-sm-3 mb-3 border-radius-xl" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
-      </div>
+    <div class="container">
+        <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/logo-tri-nsf-statement.jpg' %}" alt="image">
     </div>
     <!-- -------- START Features w/ pattern background & stats & rocket -------- -->
     <section class="pb-5 position-relative bg-gradient-dark mx-n3">
