updated about-us template css

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -63,11 +63,12 @@
           </div>
           </div>
       </div>
+      <div class="row">
+        <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/logo-tri-nsf-statement.jpg' %}" alt="image">
+      </div>
     </section>
     <!-- END about-us image & text & info -->
-    <div class="container">
-        <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/logo-tri-nsf-statement.jpg' %}" alt="image">
-    </div>
+
     <!-- -------- START Features w/ pattern background & stats & rocket -------- -->
     <section class="pb-5 position-relative bg-gradient-dark mx-n3">
       <div class="container">
