--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -74,8 +74,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 text-start mb-5 mt-5">
-            <h3 class="text-white z-index-1 position-relative">The Executive Team</h3>
-            <p class="text-white opacity-8 mb-0">There’s nothing I really wanted to do in life that I wasn’t able to get good at. That’s my skill.</p>
+            <h3 class="text-white z-index-1 position-relative">The Metadata Team</h3>
+            <p class="text-white opacity-8 mb-0">Insight into environmental DNA metadata was an effort that received
+              input from multiple collaborators across and outside of the grant. The metadata team were the effort behind
+              compiling, modeling, and implementing Maine-eDNA Metadata.</p>
           </div>
         </div>
         <div class="row">
@@ -83,17 +85,19 @@
             <div class="card card-profile mt-4">
               <div class="row">
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
-                  <a href="javascript:;">
+                  <a href="https://www.linkedin.com/in/melissa-kimble/">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/team-5.jpg' %}" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="https://avatars.githubusercontent.com/u/18583578?v=4" alt="image">
                     </div>
                   </a>
                 </div>
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
-                    <h5 class="mb-0">Emma Roberts</h5>
-                    <h6 class="text-info">UI Designer</h6>
-                    <p class="mb-0">Artist is a term applied to a person who engages in an activity deemed to be an art.</p>
+                    <h5 class="mb-0">Melissa Kimble</h5>
+                    <h6 class="text-info">Data Engineer</h6>
+                    <p class="mb-0">Interested in interdisciplinary work on Spatial Data Science and Data Engineering.
+                      Particularly with respect to innovative solutions for automating the collection, distribution,
+                      analysis, and integration of spatiotemporal data and characterizing their uncertainties.</p>
                   </div>
                 </div>
               </div>
@@ -103,17 +107,17 @@
             <div class="card card-profile mt-lg-4 mt-5">
               <div class="row">
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
-                  <a href="javascript:;">
+                  <a href="https://umaine.edu/scis/people/kate-beard-tisdale/">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/bruce-mars.jpg' %}" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="https://umaine.edu/scis/wp-content/uploads/sites/507/2019/09/Beard-Tisdale-2.jpg" alt="image">
                     </div>
                   </a>
                 </div>
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
-                    <h5 class="mb-0">William Pearce</h5>
-                    <h6 class="text-info">Boss</h6>
-                    <p class="mb-0">Artist is a term applied to a person who engages in an activity deemed to be an art.</p>
+                    <h5 class="mb-0">Dr. Kate Beard-Tisdale</h5>
+                    <h6 class="text-info">Professor of Spatial Computing</h6>
+                    <p class="mb-0">Modeling, analysis and visualization of spatio-temporal phenomena.</p>
                   </div>
                 </div>
               </div>
@@ -125,17 +129,17 @@
             <div class="card card-profile mt-4 z-index-2">
               <div class="row">
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
-                  <a href="javascript:;">
+                  <a href="https://umaine.edu/biomed/home/faculty/benjamin-king/">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/ivana-squares.jpg' %}" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="https://umaine.edu/biomed/wp-content/uploads/sites/282/2018/05/King-Benjamin2-1-201x300.jpg" alt="image">
                     </div>
                   </a>
                 </div>
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
-                    <h5 class="mb-0">Ivana Flow</h5>
-                    <h6 class="text-info">Athlete</h6>
-                    <p class="mb-0">Artist is a term applied to a person who engages in an activity deemed to be an art.</p>
+                    <h5 class="mb-0">Dr. Benjamin King</h5>
+                    <h6 class="text-info">Assistant Professor of Bioinformatics</h6>
+                    <p class="mb-0">Utilizing genomic and computational approaches to understand the mechanisms of stress responses.</p>
                   </div>
                 </div>
               </div>
@@ -145,17 +149,126 @@
             <div class="card card-profile mt-lg-4 mt-5 z-index-2">
               <div class="row">
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
-                  <a href="javascript:;">
+                  <a href="https://umaine.edu/scis/wp-content/uploads/sites/507/2020/10/chaofanchen-423x529.jpg">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/ivana-square.jpg' %}" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="https://umaine.edu/scis/people/chaofan-chen/" alt="image">
                     </div>
                   </a>
                 </div>
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
-                    <h5 class="mb-0">Marquez Garcia</h5>
-                    <h6 class="text-info">JS Developer</h6>
-                    <p class="mb-0">Artist is a term applied to a person who engages in an activity deemed to be an art.</p>
+                    <h5 class="mb-0">Dr. Chaofan Chen</h5>
+                    <h6 class="text-info">Assistant Professor of Computer Science</h6>
+                    <p class="mb-0">Developing new techniques to enhance the interpretability and transparency of
+                      machine learning models, especially deep learning models, and in applying such techniques to
+                      healthcare, finance, and other application domains, where high-stakes decisions are made and
+                      interpretability is key for whether one can trust the predictions made by machine learning models.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-lg-6 col-12">
+            <div class="card card-profile mt-4 z-index-2">
+              <div class="row">
+                <div class="col-lg-4 col-md-6 col-12 mt-n5">
+                  <a href="https://www.linkedin.com/in/laura-m-jackson">
+                    <div class="p-3 pe-md-0">
+                      <img class="w-100 border-radius-md shadow-lg" src="https://umaine.edu/epscor/wp-content/uploads/sites/25/2021/11/LJackson-16-x-9.jpg" alt="image">
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-8 col-md-6 col-12 my-auto">
+                  <div class="card-body ps-lg-0">
+                    <h5 class="mb-0">Dr. Laura Jackson</h5>
+                    <h6 class="text-info">Integrative Data Scientist</h6>
+                    <p class="mb-0">.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-12">
+            <div class="card card-profile mt-lg-4 mt-5 z-index-2">
+              <div class="row">
+                <div class="col-lg-4 col-md-6 col-12 mt-n5">
+                  <a href="https://umaine.edu/marine/people/geneva-york/">
+                    <div class="p-3 pe-md-0">
+                      <img class="w-100 border-radius-md shadow-lg" src="https://umaine.edu/ednalab/wp-content/uploads/sites/539/2019/08/Geneva-2-93x140.jpg" alt="image">
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-8 col-md-6 col-12 my-auto">
+                  <div class="card-body ps-lg-0">
+                    <h5 class="mb-0">Geneva York</h5>
+                    <h6 class="text-info">Laboratory Manager, Environmental DNA Laboratory</h6>
+                    <p class="mb-0">Using environmental DNA to detect invasive species in Maine waters.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-lg-6 col-12">
+            <div class="card card-profile mt-4 z-index-2">
+              <div class="row">
+                <div class="col-lg-4 col-md-6 col-12 mt-n5">
+                  <a href="https://www.linkedin.com/in/samantha-silverbrand-538b1a172">
+                    <div class="p-3 pe-md-0">
+                      <img class="w-100 border-radius-md shadow-lg" src="https://sbe.umaine.edu/wp-content/uploads/sites/92/2020/08/Silverbrand-423x414.jpeg" alt="image">
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-8 col-md-6 col-12 my-auto">
+                  <div class="card-body ps-lg-0">
+                    <h5 class="mb-0">Samantha Silverbrand</h5>
+                    <h6 class="text-info">Laboratory ...</h6>
+                    <p class="mb-0">.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-12">
+            <div class="card card-profile mt-lg-4 mt-5 z-index-2">
+              <div class="row">
+                <div class="col-lg-4 col-md-6 col-12 mt-n5">
+                  <a href="https://www.linkedin.com/in/keijaoh-campbell">
+                    <div class="p-3 pe-md-0">
+                      <img class="w-100 border-radius-md shadow-lg" src="" alt="image">
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-8 col-md-6 col-12 my-auto">
+                  <div class="card-body ps-lg-0">
+                    <h5 class="mb-0">Keijaoh Campbell</h5>
+                    <h6 class="text-info">Computer Scientist</h6>
+                    <p class="mb-0">Machine learning applications.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-lg-6 col-12">
+            <div class="card card-profile mt-4 z-index-2">
+              <div class="row">
+                <div class="col-lg-4 col-md-6 col-12 mt-n5">
+                  <a href="">
+                    <div class="p-3 pe-md-0">
+                      <img class="w-100 border-radius-md shadow-lg" src="" alt="image">
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-8 col-md-6 col-12 my-auto">
+                  <div class="card-body ps-lg-0">
+                    <h5 class="mb-0">Steven Allers</h5>
+                    <h6 class="text-info">Graduate Student</h6>
+                    <p class="mb-0">.</p>
                   </div>
                 </div>
               </div>
