updated about-us content

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -95,9 +95,7 @@
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Melissa Kimble</h5>
                     <h6 class="text-info">Data Engineer</h6>
-                    <p class="mb-0">Interested in interdisciplinary work on Spatial Data Science and Data Engineering.
-                      Particularly with respect to innovative solutions for automating the collection, distribution,
-                      analysis, and integration of spatiotemporal data and characterizing their uncertainties.</p>
+                    <p class="mb-0">Interdisciplinary work on spatial data science and data engineering.</p>
                   </div>
                 </div>
               </div>
@@ -159,10 +157,8 @@
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Dr. Chaofan Chen</h5>
                     <h6 class="text-info">Assistant Professor of Computer Science</h6>
-                    <p class="mb-0">Developing new techniques to enhance the interpretability and transparency of
-                      machine learning models, especially deep learning models, and in applying such techniques to
-                      healthcare, finance, and other application domains, where high-stakes decisions are made and
-                      interpretability is key for whether one can trust the predictions made by machine learning models.</p>
+                    <p class="mb-0">Techniques to enhance the interpretability and transparency of
+                      machine learning models, especially deep learning models.</p>
                   </div>
                 </div>
               </div>
@@ -176,7 +172,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="https://www.linkedin.com/in/laura-m-jackson">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="https://umaine.edu/epscor/wp-content/uploads/sites/25/2021/11/LJackson-16-x-9.jpg" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="https://umaine.edu/edna/wp-content/uploads/sites/529/2021/05/Laura-3-93x140.png" alt="image">
                     </div>
                   </a>
                 </div>
