--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -147,9 +147,9 @@
             <div class="card card-profile mt-lg-4 mt-5 z-index-2">
               <div class="row">
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
-                  <a href="https://umaine.edu/scis/wp-content/uploads/sites/507/2020/10/chaofanchen-423x529.jpg">
+                  <a href="https://umaine.edu/scis/people/chaofan-chen/">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="https://umaine.edu/scis/people/chaofan-chen/" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="https://umaine.edu/scis/wp-content/uploads/sites/507/2020/10/chaofanchen-423x529.jpg" alt="image">
                     </div>
                   </a>
                 </div>
