--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -54,18 +54,11 @@
                       </div>
                     </div>
                     <div class="mt-4">
-                      <button type="button" class="btn btn-icon-only btn-link text-white btn-lg mb-0" data-toggle="tooltip" data-placement="bottom" data-original-title="Log in with Facebook">
-                        <i class="fab fa-facebook"></i>
-                      </button>
-                      <button type="button" class="btn btn-icon-only btn-link text-white btn-lg mb-0" data-toggle="tooltip" data-placement="bottom" data-original-title="Log in with Twitter">
-                        <i class="fab fa-twitter"></i>
-                      </button>
-                      <button type="button" class="btn btn-icon-only btn-link text-white btn-lg mb-0" data-toggle="tooltip" data-placement="bottom" data-original-title="Log in with Dribbble">
-                        <i class="fab fa-dribbble"></i>
-                      </button>
-                      <button type="button" class="btn btn-icon-only btn-link text-white btn-lg mb-0" data-toggle="tooltip" data-placement="bottom" data-original-title="Log in with Instagram">
-                        <i class="fab fa-instagram"></i>
-                      </button>
+                      <a href="https://www.facebook.com/MaineEPSCoR/"><i class="fab fa-facebook text-lg text-white mb-0"></i></a>
+                      <a href="https://www.instagram.com/maine.epscor"><i class="fab fa-instagram text-lg text-white mb-0"></i></a>
+                      <a href="https://twitter.com/maineepscor"><i class="fab fa-twitter text-lg text-white mb-0"></i></a>
+                      <a href="https://github.com/maine-edna/medna-metadata"><i class="fa fa-github text-lg text-white mb-0"></i></a>
+                      <a href="https://umaine.edu/edna/"><i class="fas fa-home text-lg text-white mb-0"></i></a>
                     </div>
                   </div>
                 </div>
