updated contact-us template css

--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -54,11 +54,11 @@
                       </div>
                     </div>
                     <div class="mt-4">
-                      <a href="https://www.facebook.com/MaineEPSCoR/"><i class="fab fa-facebook text-lg text-white mb-0"></i></a>
-                      <a href="https://www.instagram.com/maine.epscor"><i class="fab fa-instagram text-lg text-white mb-0"></i></a>
-                      <a href="https://twitter.com/maineepscor"><i class="fab fa-twitter text-lg text-white mb-0"></i></a>
-                      <a href="https://github.com/maine-edna/medna-metadata"><i class="fa fa-github text-lg text-white mb-0"></i></a>
-                      <a href="https://umaine.edu/edna/"><i class="fas fa-home text-lg text-white mb-0"></i></a>
+                      <a href="https://www.facebook.com/MaineEPSCoR/"><i class="fab fa-facebook btn btn-icon-only btn-link text-white btn-lg mb-0"></i></a>
+                      <a href="https://www.instagram.com/maine.epscor"><i class="fab fa-instagram btn btn-icon-only btn-link text-white btn-lg mb-0"></i></a>
+                      <a href="https://twitter.com/maineepscor"><i class="fab fa-twitter btn btn-icon-only btn-link text-white btn-lg mb-0"></i></a>
+                      <a href="https://github.com/maine-edna/medna-metadata"><i class="fa fa-github btn btn-icon-only btn-link text-white btn-lg mb-0"></i></a>
+                      <a href="https://umaine.edu/edna/"><i class="fas fa-home btn btn-icon-only btn-link text-white btn-lg mb-0"></i></a>
                     </div>
                   </div>
                 </div>
