--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -28,29 +28,21 @@
                   <div class="mask bg-gradient-dark opacity-8"></div>
                   <div class="p-5 ps-sm-8 position-relative text-start my-auto z-index-2">
                     <h3 class="text-white">Contact Information</h3>
-                    <p class="text-white opacity-8 mb-4">Fill up the form and our Team will get back to you within 24 hours.</p>
-                    <div class="d-flex p-2 text-white">
-                      <div>
-                        <i class="fas fa-phone text-sm"></i>
-                      </div>
-                      <div class="ps-3">
-                        <span class="text-sm opacity-8">(+40) 772 100 200</span>
-                      </div>
-                    </div>
+                    <p class="text-white opacity-8 mb-4">Fill up the form and our Team will get back to you.</p>
                     <div class="d-flex p-2 text-white">
                       <div>
                         <i class="fas fa-envelope text-sm"></i>
                       </div>
                       <div class="ps-3">
-                        <span class="text-sm opacity-8">hello@creative-tim.com</span>
+                        <span class="text-sm opacity-8">melissa.kimble@maine.edu</span>
                       </div>
                     </div>
                     <div class="d-flex p-2 text-white">
                       <div>
-                        <i class="fas fa-map-marker-alt text-sm"></i>
+                        <a href="https://www.google.com/maps/place/University+of+Maine/@44.901867,-68.6710191,17z/data=!3m1!4b1!4m5!3m4!1s0x4cafb136b8bf012d:0x952e0ddbca41c786!8m2!3d44.901867!4d-68.6688251"><i class="fas fa-map-marker-alt text-sm"></i></a>
                       </div>
                       <div class="ps-3">
-                        <span class="text-sm opacity-8">Dyonisie Wolf Bucharest, RO 010458</span>
+                        <span class="text-sm opacity-8">168 College Ave, Orono, ME 04469</span>
                       </div>
                     </div>
                     <div class="mt-4">
