--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -34,7 +34,7 @@
                         <i class="fas fa-envelope text-sm"></i>
                       </div>
                       <div class="ps-3">
-                        <a href="mailto:melissa.kimble@maine.edu"><span class="text-sm opacity-8">melissa.kimble@maine.edu</span></a>
+                        <a href="mailto:melissa.kimble@maine.edu"><span class="text-sm text-white opacity-8">melissa.kimble@maine.edu</span></a>
                       </div>
                     </div>
                     <div class="d-flex p-2 text-white">
@@ -42,7 +42,7 @@
                         <i class="fas fa-map-marker-alt text-sm"></i>
                       </div>
                       <div class="ps-3">
-                        <a href="https://www.google.com/maps/place/University+of+Maine/@44.901867,-68.6710191,17z/data=!3m1!4b1!4m5!3m4!1s0x4cafb136b8bf012d:0x952e0ddbca41c786!8m2!3d44.901867!4d-68.6688251"><span class="text-sm opacity-8">168 College Ave, Orono, ME 04469</span></a>
+                        <a href="https://www.google.com/maps/place/University+of+Maine/@44.901867,-68.6710191,17z/data=!3m1!4b1!4m5!3m4!1s0x4cafb136b8bf012d:0x952e0ddbca41c786!8m2!3d44.901867!4d-68.6688251"><span class="text-sm text-white opacity-8">168 College Ave, Orono, ME 04469</span></a>
                       </div>
                     </div>
                     <div class="mt-4">
