--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -30,7 +30,7 @@
                   <div class="mask bg-gradient-dark opacity-8"></div>
                   <div class="p-5 ps-sm-8 position-relative text-start my-auto z-index-2">
                     <h3 class="text-white">Contact Information</h3>
-                    <p class="text-white opacity-8 mb-4">Fill up the form and our Team will get back to you.</p>
+                    <p class="text-white opacity-8 mb-4">Fill out the form and our Team will get back to you.</p>
                     <div class="d-flex p-2 text-white">
                       <div>
                         <i class="fas fa-envelope text-sm"></i>
