--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -43,7 +43,7 @@
 
   <header class="header-2">
     <div class="page-header min-vh-75 relative" style="background-image: url('{% static 'assets/img/bg0-dark.jpg' %}')">
-      <span class="mask bg-gradient-primary opacity-4"></span>
+      <span class="mask bg-gradient-dark opacity-6"></span>
       <div class="container">
         <div class="row">
           <div class="col-lg-7 text-center mx-auto">
