updated about-us template

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -63,8 +63,36 @@
           </div>
           </div>
       </div>
-      <div class="row">
-        <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/logo-tri-nsf-statement.jpg' %}" alt="image">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 mx-auto">
+            <div class="text-center">
+              <h3 class="mt-5 mb-4">This project was supported by</h3>
+              <div class="row justify-content-center">
+                <div class="col-lg-2 col-4">
+                  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1849227" target="_blank">
+                    <img src="{% static 'assets/img/logos/logo-nsf.png' %}" class="img-fluid" data-bs-toggle="tooltip" data-bs-placement="bottom" title="The National Science Foundation award #OIA-1849227">
+                  </a>
+                </div>
+                <div class="col-lg-2 col-4">
+                  <a href="https://umaine.edu/epscor/">
+                    <img src="{% static 'assets/img/logos/logo-maine-epscor.jpg' %}" class="img-fluid" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Maine's Established Program to Stimulate Competitive Research (EPSCoR)">
+                  </a>
+                </div>
+                <div class="col-lg-2 col-4">
+                  <a href="https://umaine.edu/edna/">
+                    <img src="{% static 'assets/img/logos/logo-medna-regular-lg.png' %}" class="img-fluid" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Maine-eDNA - Sustaining Coastal Ecosystems in Maine and Beyond">
+                  </a>
+                </div>
+                <div class="col-lg-2 col-4">
+                  <a href="https://umaine.edu/">
+                    <img src="{% static 'assets/img/logos/logo-umaine-crest-4c.png' %}" class="img-fluid" data-bs-toggle="tooltip" data-bs-placement="bottom" title="The University of Maine">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- END about-us image & text & info -->
