changed /main/support to /main/contact-us.html

--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -314,7 +314,7 @@
               <div class="d-none d-lg-block">
                 <ul class="list-group">
                   <li class="nav-item list-group-item border-0 p-0">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="/main/support">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="/main/contact-us.html">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
                       <span class="text-sm">Get support from experts</span>
                     </a>
@@ -329,7 +329,7 @@
               </div>
               <div class="row d-lg-none">
                 <div class="col-md-12 g-0">
-                  <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="/main/support">
+                  <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="/main/contact-us.html">
                     <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
                     <span class="text-sm">Get support from experts</span>
                   </a>
