--- a/frontend/templates/includes/django-material-dashboard/footer.html
+++ b/frontend/templates/includes/django-material-dashboard/footer.html
@@ -14,7 +14,7 @@
                      class="nav-link text-muted" target="_blank">Sources</a>
                 </li>
                 <li class="nav-item">
-                  <a href="/main/support/" class="nav-link text-muted" target="_blank">Support</a>
+                  <a href="/main/contact-us.html" class="nav-link text-muted" target="_blank">Support</a>
                 </li>
               </ul>
             </div>
