updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -96,7 +96,7 @@
               <div class="card card-rotate card-background card-background-mask-primary shadow-primary mt-md-0 mt-5">
                 <div class="front front-background" style="background-image: url(https://images.unsplash.com/photo-1596466561931-5537af89759f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80); background-size: cover;">
                   <div class="card-body py-7 text-center">
-                    <img class="navbar-brand-img h-25" src="{% static 'assets/img/logo-medna-light.png' %}" alt="maine-edna logo">
+                    <img src="{% static 'assets/img/logo-medna-light.png' %}" class="mb-3 footer-logo" alt="main_logo">
                     <h3 class="text-white">Feel the <br /> Material Kit</h3>
                     <p class="text-white opacity-8">All the Bootstrap components that you need in a development have been re-design with the new look.</p>
                   </div>
