updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -96,16 +96,21 @@
               <div class="card card-rotate card-background card-background-mask-primary shadow-primary mt-md-0 mt-5">
                 <div class="front front-background" style="background-image: url(https://images.unsplash.com/photo-1596466561931-5537af89759f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80); background-size: cover;">
                   <div class="card-body py-7 text-center">
-                      <img src="{% static 'assets/img/logo-medna-light.png' %}" class="w-15 mx-auto mt-3" alt="main_logo">
-                    <h3 class="text-white">Feel the <br /> Material Kit</h3>
-                    <p class="text-white opacity-8">All the Bootstrap components that you need in a development have been re-design with the new look.</p>
+                      <img src="{% static 'assets/img/logo-medna-light.png' %}" class="w-10 mx-auto mt-3" alt="main_logo">
+                    <h3 class="text-white">Maine <br /> Environmental DNA</h3>
+                    <p class="text-white opacity-8">A state-wide, multi-institutional initiative establishing Maine as a
+                      national leader in environmental monitoring, ecological understanding and sustainability of coastal
+                      ecosystems through research, education, and outreach.</p>
                   </div>
                 </div>
                 <div class="back back-background" style="background-image: url(https://images.unsplash.com/photo-1630691431017-04763cfdf785?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80); background-size: cover;">
                   <div class="card-body pt-7 text-center">
                     <h3 class="text-white">Discover More</h3>
-                    <p class="text-white opacity-8"> You will save a lot of time going from prototyping to full-functional code because all elements are implemented.</p>
-                    <a href="/main/ui-sections-features.html" class="btn btn-white btn-sm w-50 mx-auto mt-3">Start with Headers</a>
+                    <p class="text-white opacity-8"> Maine-eDNA is a 5-year research, education and outreach program
+                      that seeks to transform our understanding and sustainability of Maine’s coastal ecosystems via
+                      environmental DNA (eDNA) innovations that unlock new scales of inference and new scales of
+                      collaboration. </p>
+                    <a href="https://umaine.edu/edna/about-us/" class="btn btn-white btn-sm w-50 mx-auto mt-3">Learn More</a>
                   </div>
                 </div>
               </div>
