--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -62,25 +62,27 @@
             <div class="row">
               <div class="col-md-4 position-relative">
                 <div class="p-3 text-center">
-                  <h1 class="text-gradient text-primary"><span id="state1" countTo="70">0</span>+</h1>
-                  <h5 class="mt-3">Coded Elements</h5>
-                  <p class="text-sm font-weight-normal">From buttons, to inputs, navbars, alerts or cards, you are covered</p>
+                  <h1 class="text-gradient text-primary"><span id="state1" countTo="300">0</span>+</h1>
+                  <h5 class="mt-3">Collaborators</h5>
+                  <p class="text-sm font-weight-normal">An effort spanning the state of Maine and multiple years.</p>
                 </div>
                 <hr class="vertical dark">
               </div>
               <div class="col-md-4 position-relative">
                 <div class="p-3 text-center">
-                  <h1 class="text-gradient text-primary"> <span id="state2" countTo="15">0</span>+</h1>
-                  <h5 class="mt-3">Design Blocks</h5>
-                  <p class="text-sm font-weight-normal">Mix the sections, change the colors and unleash your creativity</p>
+                  <h1 class="text-gradient text-primary"> $<span id="state2" countTo="20">0</span>m</h1>
+                  <h5 class="mt-3">Awarded Funding</h5>
+                  <p class="text-sm font-weight-normal">RII Track-1: Molecule to Ecosystem: Environmental DNA as a Nexus
+                    of Coastal Ecosystem Sustainability for Maine (Maine-eDNA) is supported by National Science Foundation
+                    award #OIA-1849227 to Maine EPSCoR at the University of Maine.</p>
                 </div>
                 <hr class="vertical dark">
               </div>
               <div class="col-md-4">
                 <div class="p-3 text-center">
-                  <h1 class="text-gradient text-primary" id="state3" countTo="4">0</h1>
-                  <h5 class="mt-3">Pages</h5>
-                  <p class="text-sm font-weight-normal">Save 3-4 weeks of work when you use our pre-made pages for your website</p>
+                  <h1 class="text-gradient text-primary"><span id="state3" countTo="25">0</span>+</h1>
+                  <h5 class="mt-3">Institutions</h5>
+                  <p class="text-sm font-weight-normal">Federal, state, private, and public.</p>
                 </div>
               </div>
             </div>
