--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -55,6 +55,7 @@
     </div>
   </header>
   <div class="card card-body blur shadow-blur mx-3 mx-md-4 mt-n6">
+    <h2 class="text-dark mb-0">Maine-eDNA</h2>
     <section class="pt-3 pb-4" id="count-stats">
       <div class="container">
         <div class="row">
@@ -72,9 +73,8 @@
                 <div class="p-3 text-center">
                   <h1 class="text-gradient text-primary"> $<span id="state2" countTo="20">0</span>m</h1>
                   <h5 class="mt-3">Awarded Funding</h5>
-                  <p class="text-sm font-weight-normal">RII Track-1: Molecule to Ecosystem: Environmental DNA as a Nexus
-                    of Coastal Ecosystem Sustainability for Maine (Maine-eDNA) is supported by National Science Foundation
-                    award #OIA-1849227 to Maine EPSCoR at the University of Maine.</p>
+                  <p class="text-sm font-weight-normal">The National Science Foundation award #OIA-1849227 to Maine EPSCoR
+                    at the University of Maine.</p>
                 </div>
                 <hr class="vertical dark">
               </div>
