updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -55,7 +55,9 @@
     </div>
   </header>
   <div class="card card-body blur shadow-blur mx-3 mx-md-4 mt-n6">
-    <h2 class="text-dark mb-0">Maine-eDNA</h2>
+    <div class="text-center">
+      <h1 class="text-dark mb-0">Maine-eDNA</h1>
+    </div>
     <section class="pt-3 pb-4" id="count-stats">
       <div class="container">
         <div class="row">
