--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -125,29 +125,39 @@
               <div class="col-md-6">
                 <div class="info">
                   <i class="material-icons text-gradient text-primary text-3xl">content_copy</i>
-                  <h5 class="font-weight-bolder mt-3">Full Documentation</h5>
-                  <p class="pe-5">Built by developers for developers. Check the foundation and you will find everything inside our documentation.</p>
+                  <h5 class="font-weight-bolder mt-3">Original Funding Source</h5>
+                  <p class="pe-5">A $20-million grant from the National Science Foundation EPSCoR program will fund the
+                    five-year ‘Maine-eDNA’ initiative that aims to revolutionize environmental monitoring and ecological
+                    understanding of coastal ecosystems.</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info">
                   <i class="material-icons text-gradient text-primary text-3xl">flip_to_front</i>
-                  <h5 class="font-weight-bolder mt-3">Bootstrap 5 Ready</h5>
-                  <p class="pe-3">The world’s most popular front-end open source toolkit, featuring Sass variables and mixins.</p>
+                  <h5 class="font-weight-bolder mt-3">What is eDNA?</h5>
+                  <p class="pe-3">eDNA is the genetic material left behind by organisms in their environments as a
+                    byproduct of their natural life and death processes. For some microbes, eDNA can come from the whole
+                    living organism. For larger organisms, eDNA typically comes from shed skin cells, gametes or waste
+                    products. eDNA for aquatic organisms is collected from water or sediment samples.</p>
                 </div>
               </div>
             </div>
             <div class="row justify-content-start mt-5">
               <div class="col-md-6 mt-3">
                 <i class="material-icons text-gradient text-primary text-3xl">price_change</i>
-                <h5 class="font-weight-bolder mt-3">Save Time & Money</h5>
-                <p class="pe-5">Creating your design from scratch with dedicated designers can be very expensive. Start with our Design System.</p>
+                <h5 class="font-weight-bolder mt-3">Global Impact</h5>
+                <p class="pe-5">Scientists around the world collect and share DNA data to study medical, agricultural
+                  and evolutionary questions. For example, in human medicine DNA is used to understand how the building
+                  blocks of our bodies interact and function. Similarly, eDNA can help us understand how species — the
+                  building blocks of communities — interact to make ecosystems function.</p>
               </div>
               <div class="col-md-6 mt-3">
                 <div class="info">
                   <i class="material-icons text-gradient text-primary text-3xl">devices</i>
-                  <h5 class="font-weight-bolder mt-3">Fully Responsive</h5>
-                  <p class="pe-3">Regardless of the screen size, the website content will naturally fit the given resolution.</p>
+                  <h5 class="font-weight-bolder mt-3">Data Integration</h5>
+                  <p class="pe-3">One of the project’s main goals is to share and integrate the data with other monitoring
+                    efforts in Maine’s coastal communities. Massive amounts of eDNA data can be used to study many future
+                    questions.</p>
                 </div>
               </div>
             </div>
