updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -124,7 +124,7 @@
             <div class="row justify-content-start">
               <div class="col-md-6">
                 <div class="info">
-                  <i class="material-icons text-gradient text-primary text-3xl">content_copy</i>
+                  <i class="fa-regular fa-magnifying-glass-dollar text-gradient text-primary text-3xl"></i>
                   <h5 class="font-weight-bolder mt-3">Original Funding Source</h5>
                   <p class="pe-5">A $20-million grant from the National Science Foundation EPSCoR program will fund the
                     five-year ‘Maine-eDNA’ initiative that aims to revolutionize environmental monitoring and ecological
@@ -133,7 +133,7 @@
               </div>
               <div class="col-md-6">
                 <div class="info">
-                  <i class="material-icons text-gradient text-primary text-3xl">flip_to_front</i>
+                  <i class="fa-duotone fa-dna text-gradient text-primary text-3xl"></i>
                   <h5 class="font-weight-bolder mt-3">What is eDNA?</h5>
                   <p class="pe-3">eDNA is the genetic material left behind by organisms in their environments as a
                     byproduct of their natural life and death processes. For some microbes, eDNA can come from the whole
@@ -144,12 +144,11 @@
             </div>
             <div class="row justify-content-start mt-5">
               <div class="col-md-6 mt-3">
-                <i class="material-icons text-gradient text-primary text-3xl">price_change</i>
+                <i class="fa-regular fa-globe text-gradient text-primary text-3xl"></i>
                 <h5 class="font-weight-bolder mt-3">Global Impact</h5>
                 <p class="pe-5">Scientists around the world collect and share DNA data to study medical, agricultural
-                  and evolutionary questions. For example, in human medicine DNA is used to understand how the building
-                  blocks of our bodies interact and function. Similarly, eDNA can help us understand how species — the
-                  building blocks of communities — interact to make ecosystems function.</p>
+                  and evolutionary questions. eDNA can help us understand how species — the building blocks of
+                  communities — interact to make ecosystems function.</p>
               </div>
               <div class="col-md-6 mt-3">
                 <div class="info">
