updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -124,7 +124,7 @@
             <div class="row justify-content-start">
               <div class="col-md-6">
                 <div class="info">
-                  <i class="fa fa-magnifying-glass-dollar text-gradient text-primary text-3xl"></i>
+                  <i class="fa fa-dollar-sign text-gradient text-primary text-3xl"></i>
                   <h5 class="font-weight-bolder mt-3">Original Funding Source</h5>
                   <p class="pe-5">A $20-million grant from the National Science Foundation EPSCoR program will fund the
                     five-year ‘Maine-eDNA’ initiative that aims to revolutionize environmental monitoring and ecological
