updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -60,7 +60,7 @@
         <div class="row">
           <div class="col-lg-9 mx-auto py-3">
             <div class="text-center">
-              <h1 class="text-dark mb-0">Maine-eDNA</h1>
+              <h1 class="text-dark mb-0">What is Maine-eDNA?</h1>
             </div>
             <div class="row">
               <div class="col-md-4 position-relative">
@@ -136,9 +136,7 @@
                   <i class="fa fa-dna text-gradient text-primary text-3xl"></i>
                   <h5 class="font-weight-bolder mt-3">What is eDNA?</h5>
                   <p class="pe-3">eDNA is the genetic material left behind by organisms in their environments as a
-                    byproduct of their natural life and death processes. For some microbes, eDNA can come from the whole
-                    living organism. For larger organisms, eDNA typically comes from shed skin cells, gametes or waste
-                    products. eDNA for aquatic organisms is collected from water or sediment samples.</p>
+                    byproduct of their natural life and death processes. </p>
                 </div>
               </div>
             </div>
