updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -75,8 +75,8 @@
                 <div class="p-3 text-center">
                   <h1 class="text-gradient text-primary"> $<span id="state2" countTo="20">0</span>m</h1>
                   <h5 class="mt-3">Awarded Funding</h5>
-                  <p class="text-sm font-weight-normal">The National Science Foundation award #OIA-1849227 to Maine EPSCoR
-                    at the University of Maine.</p>
+                  <p class="text-sm font-weight-normal">Growing Maine's workforce by creating opportunities in
+                    significant research areas across the state.</p>
                 </div>
                 <hr class="vertical dark">
               </div>
@@ -126,9 +126,9 @@
                 <div class="info">
                   <i class="fa fa-dollar-sign text-gradient text-primary text-3xl"></i>
                   <h5 class="font-weight-bolder mt-3">Original Funding Source</h5>
-                  <p class="pe-5">A $20-million grant from the National Science Foundation EPSCoR program will fund the
-                    five-year ‘Maine-eDNA’ initiative that aims to revolutionize environmental monitoring and ecological
-                    understanding of coastal ecosystems.</p>
+                  <p class="pe-5">RII Track-1: Molecule to Ecosystem: Environmental DNA as a Nexus of Coastal Ecosystem
+                    Sustainability for Maine (Maine-eDNA) is supported by National Science Foundation award #OIA-1849227
+                    to Maine EPSCoR at the University of Maine.</p>
                 </div>
               </div>
               <div class="col-md-6">
