updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -114,7 +114,7 @@
                       that seeks to transform our understanding and sustainability of Maine’s coastal ecosystems via
                       environmental DNA (eDNA) innovations that unlock new scales of inference and new scales of
                       collaboration. </p>
-                    <a href="https://umaine.edu/edna/about-us/" class="btn btn-white btn-sm w-50 mx-auto mt-3">Learn More</a>
+                    <a href="https://umaine.edu/edna/about-us/" target="_blank" class="btn btn-white btn-sm w-50 mx-auto mt-3">Learn More</a>
                   </div>
                 </div>
               </div>
@@ -186,7 +186,7 @@
           <div class="col-lg-9">
             <div class="row">
               <div class="col-md-4 mt-md-0">
-                <a href="https://umaine.edu/">
+                <a href="https://umaine.edu/" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="{% static 'assets/img/screenshots/screenshot-umaine-homepage.png' %}"
                          alt="UMaine" data-bs-toggle="tooltip" data-bs-placement="top" title="Faculty and staff conduct research in every county in Maine, on all continents and in oceans worldwide.">
@@ -198,7 +198,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="https://www.bigelow.org/">
+                <a href="https://www.bigelow.org/" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="{% static 'assets/img/screenshots/screenshot-bigelow-homepage.png' %}"
                          alt="Bigelow" data-bs-toggle="tooltip" data-bs-placement="top" title="An independent, nonprofit research institute located in East Boothbay, Maine.">
@@ -209,8 +209,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-md-4 mt-md-0 mt-3">
-                <a href="javascript:;">
+              <div class="col-md-4 mt-md-0 mt-4">
+                <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-ce-homepage.png' %}"
                          alt="cooperative extension" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element">
@@ -222,7 +222,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="javascript:;">
+                <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-usm-homepage.png' %}"
                          alt="usm" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element">
@@ -236,7 +236,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-md-4 mt-md-0 mt-3">
-                <a href="javascript:;">
+                <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-une-homepage.png' %}"
                          alt="une" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element">
@@ -247,8 +247,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-md-4 mt-md-0 mt-4">
-                <a href="javascript:;">
+              <div class="col-md-4 mt-md-0 mt-3">
+                <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-umm-homepage.png' %}"
                          alt="umm" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element">
@@ -262,7 +262,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="javascript:;">
+                <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-smcc-homepage.png' %}"
                          alt="smcc" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element" >
@@ -274,7 +274,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="javascript:;">
+                <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-colby-homepage.png' %}"
                          alt="colby" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element">
@@ -286,7 +286,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="javascript:;">
+                <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-gmri-homepage.png' %}"
                          alt="gmri" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element" >
