updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -169,7 +169,7 @@
             <div class="col-lg-6">
               <span class="badge bg-primary mb-3">Multi-Institutional</span>
               <h2 class="text-dark mb-0">Growing Partnerships</h2>
-              <p class="lead">The initial partnerships have facilitated the growth and inclusion of federal, state,
+              <p class="lead">The strategic plan partnerships have facilitated the growth and inclusion of federal, state,
                 public, and private institutions, communities, and individuals. </p>
             </div>
           </div>
@@ -180,7 +180,8 @@
           <div class="col-lg-3">
             <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
               <h3>Strategic Plan Partners</h3>
-              <h6 class="text-secondary font-weight-normal pe-3"></h6>
+              <h6 class="text-secondary font-weight-normal pe-3">Working together to revolutionize environmental
+                monitoring and ecological understanding of coastal ecosystems</h6>
             </div>
           </div>
           <div class="col-lg-9">
@@ -193,7 +194,7 @@
                   </div>
                   <div class="mt-2 ms-2">
                     <h6 class="mb-0">University of Maine</h6>
-                    <p class="text-secondary text-sm">The state’s only public research university.</p>
+                    <p class="text-secondary text-sm">"The state’s only public research university."</p>
                   </div>
                 </a>
               </div>
@@ -205,7 +206,7 @@
                   </div>
                   <div class="mt-2 ms-2">
                     <h6 class="mb-0">Bigelow Laboratory for Ocean Sciences</h6>
-                    <p class="text-secondary text-sm">An independent, nonprofit research institute located in East Boothbay, Maine.</p>
+                    <p class="text-secondary text-sm">"An independent, nonprofit research institute located in East Boothbay, Maine."</p>
                   </div>
                 </a>
               </div>
@@ -217,8 +218,8 @@
                   </div>
                   <div class="mt-2 ms-2">
                     <h6 class="mb-0">Cooperative Extension</h6>
-                    <p class="text-secondary text-sm">Putting university research to work in homes, businesses, farms,
-                      and communities — in every corner of Maine.</p>
+                    <p class="text-secondary text-sm">"Putting university research to work in homes, businesses, farms,
+                      and communities — in every corner of Maine."</p>
                   </div>
                 </a>
               </div>
@@ -232,7 +233,7 @@
                   </div>
                   <div class="mt-2 ms-2">
                     <h6 class="mb-0">University of Southern Maine</h6>
-                    <p class="text-secondary text-sm">A Member of the University of Maine System</p>
+                    <p class="text-secondary text-sm">"A Member of the University of Maine System."</p>
                   </div>
                 </a>
               </div>
@@ -244,7 +245,7 @@
                   </div>
                   <div class="mt-2 ms-2">
                     <h6 class="mb-0">University of New England</h6>
-                    <p class="text-secondary text-sm">Maine’s largest private university.</p>
+                    <p class="text-secondary text-sm">"Maine’s largest private university."</p>
                   </div>
                 </a>
               </div>
@@ -256,7 +257,7 @@
                   </div>
                   <div class="mt-2 ms-2">
                     <h6 class="mb-0">University of Maine at Machias</h6>
-                    <p class="text-secondary text-sm">Maine’s Coastal University.</p>
+                    <p class="text-secondary text-sm">"Maine’s Coastal University."</p>
                   </div>
                 </a>
               </div>
@@ -270,7 +271,7 @@
                   </div>
                   <div class="mt-2 ms-2">
                     <h6 class="mb-0">Southern Maine Community College</h6>
-                    <p class="text-secondary text-sm">Maine’s largest, oldest and most diverse community college.</p>
+                    <p class="text-secondary text-sm">"Maine’s largest, oldest and most diverse community college."</p>
                   </div>
                 </a>
               </div>
@@ -282,7 +283,7 @@
                   </div>
                   <div class="mt-2 ms-2">
                     <h6 class="mb-0">Colby College</h6>
-                    <p class="text-secondary text-sm">The 12th oldest liberal arts college in the United States.</p>
+                    <p class="text-secondary text-sm">"The 12th oldest liberal arts college in the United States."</p>
                   </div>
                 </a>
               </div>
@@ -294,8 +295,7 @@
                   </div>
                   <div class="mt-2 ms-2">
                     <h6 class="mb-0">Gulf of Maine Research Institute</h6>
-                    <p class="text-secondary text-sm">An independent, objective nonprofit organization dedicated to the
-                      resilience of the Gulf of Maine ecosystem.</p>
+                    <p class="text-secondary text-sm">"An independent, objective nonprofit organization."</p>
                   </div>
                 </a>
               </div>
